--- a/Projects/Covid19_India/covid19_India_v0.1.ipynb
+++ b/Projects/Covid19_India/covid19_India_v0.1.ipynb
@@ -1589,7 +1589,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x26b1a9e0588>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x24eee57cfc8>"
       ]
      },
      "execution_count": 12,
@@ -2340,7 +2340,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x26b1a7a4d48>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x24ef019f448>"
       ]
      },
      "execution_count": 15,
@@ -2398,11 +2398,449 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Test Area Follows... Cells can be deleted if required"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>state</th>\n",
+       "      <th>total_confirmed</th>\n",
+       "      <th>total_recovered</th>\n",
+       "      <th>total_deceased</th>\n",
+       "      <th>tested</th>\n",
+       "      <th>active</th>\n",
+       "      <th>daily_confirmed</th>\n",
+       "      <th>daily_recovered</th>\n",
+       "      <th>daily_deceased</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>131</th>\n",
+       "      <td>2020-03-13</td>\n",
+       "      <td>India</td>\n",
+       "      <td>91</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6500.0</td>\n",
+       "      <td>87</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>146</th>\n",
+       "      <td>2020-03-14</td>\n",
+       "      <td>India</td>\n",
+       "      <td>102</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6500.0</td>\n",
+       "      <td>95</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>161</th>\n",
+       "      <td>2020-03-15</td>\n",
+       "      <td>India</td>\n",
+       "      <td>112</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6500.0</td>\n",
+       "      <td>105</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>178</th>\n",
+       "      <td>2020-03-16</td>\n",
+       "      <td>India</td>\n",
+       "      <td>126</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6500.0</td>\n",
+       "      <td>119</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>196</th>\n",
+       "      <td>2020-03-17</td>\n",
+       "      <td>India</td>\n",
+       "      <td>146</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6500.0</td>\n",
+       "      <td>139</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           date  state  total_confirmed  total_recovered  total_deceased  \\\n",
+       "131  2020-03-13  India               91                3               1   \n",
+       "146  2020-03-14  India              102                3               1   \n",
+       "161  2020-03-15  India              112                3               1   \n",
+       "178  2020-03-16  India              126                3               1   \n",
+       "196  2020-03-17  India              146                3               1   \n",
+       "\n",
+       "     tested  active  daily_confirmed  daily_recovered  daily_deceased  \n",
+       "131  6500.0      87             10.0              0.0             1.0  \n",
+       "146  6500.0      95             11.0              0.0             0.0  \n",
+       "161  6500.0     105             10.0              0.0             0.0  \n",
+       "178  6500.0     119             14.0              0.0             0.0  \n",
+       "196  6500.0     139             20.0              0.0             0.0  "
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Will work with a copy of the India dataset in this test area\n",
+    "df_copy = df_ind.copy()\n",
+    "df_copy.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 295 entries, 131 to 10487\n",
+      "Data columns (total 10 columns):\n",
+      " #   Column           Non-Null Count  Dtype  \n",
+      "---  ------           --------------  -----  \n",
+      " 0   date             295 non-null    object \n",
+      " 1   state            295 non-null    object \n",
+      " 2   total_confirmed  295 non-null    int64  \n",
+      " 3   total_recovered  295 non-null    int64  \n",
+      " 4   total_deceased   295 non-null    int64  \n",
+      " 5   tested           295 non-null    float64\n",
+      " 6   active           295 non-null    int64  \n",
+      " 7   daily_confirmed  295 non-null    float64\n",
+      " 8   daily_recovered  295 non-null    float64\n",
+      " 9   daily_deceased   295 non-null    float64\n",
+      "dtypes: float64(4), int64(4), object(2)\n",
+      "memory usage: 25.4+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_copy.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# We hve to make sure that total_confirmed, total_recovered and total_deceased do not have any non-int values\n",
+    "def is_int(x):\n",
+    "    try:\n",
+    "        int(x)\n",
+    "    except:\n",
+    "        return False\n",
+    "    return True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>state</th>\n",
+       "      <th>total_confirmed</th>\n",
+       "      <th>total_recovered</th>\n",
+       "      <th>total_deceased</th>\n",
+       "      <th>tested</th>\n",
+       "      <th>active</th>\n",
+       "      <th>daily_confirmed</th>\n",
+       "      <th>daily_recovered</th>\n",
+       "      <th>daily_deceased</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [date, state, total_confirmed, total_recovered, total_deceased, tested, active, daily_confirmed, daily_recovered, daily_deceased]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_copy[~df_copy['total_confirmed'].apply(is_int)].head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>state</th>\n",
+       "      <th>total_confirmed</th>\n",
+       "      <th>total_recovered</th>\n",
+       "      <th>total_deceased</th>\n",
+       "      <th>tested</th>\n",
+       "      <th>active</th>\n",
+       "      <th>daily_confirmed</th>\n",
+       "      <th>daily_recovered</th>\n",
+       "      <th>daily_deceased</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [date, state, total_confirmed, total_recovered, total_deceased, tested, active, daily_confirmed, daily_recovered, daily_deceased]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_copy[~df_copy['total_recovered'].apply(is_int)].head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>state</th>\n",
+       "      <th>total_confirmed</th>\n",
+       "      <th>total_recovered</th>\n",
+       "      <th>total_deceased</th>\n",
+       "      <th>tested</th>\n",
+       "      <th>active</th>\n",
+       "      <th>daily_confirmed</th>\n",
+       "      <th>daily_recovered</th>\n",
+       "      <th>daily_deceased</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [date, state, total_confirmed, total_recovered, total_deceased, tested, active, daily_confirmed, daily_recovered, daily_deceased]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_copy[~df_copy['total_deceased'].apply(is_int)].head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def is_float(x):\n",
+    "    try:\n",
+    "        float(x)\n",
+    "    except:\n",
+    "        return False\n",
+    "    return True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>state</th>\n",
+       "      <th>total_confirmed</th>\n",
+       "      <th>total_recovered</th>\n",
+       "      <th>total_deceased</th>\n",
+       "      <th>tested</th>\n",
+       "      <th>active</th>\n",
+       "      <th>daily_confirmed</th>\n",
+       "      <th>daily_recovered</th>\n",
+       "      <th>daily_deceased</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [date, state, total_confirmed, total_recovered, total_deceased, tested, active, daily_confirmed, daily_recovered, daily_deceased]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_copy[~df_copy['tested'].apply(is_float)].head()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Looks like we have proper values in all the columns"
+   ]
   }
  ],
  "metadata": {
