--- a/Projects/Covid19_India/Notebooks/Covid_IndiaAnalysis_v1.0.0.ipynb
+++ b/Projects/Covid19_India/Notebooks/Covid_IndiaAnalysis_v1.0.0.ipynb
@@ -4,9 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Covid19 India: Predictive Modeling\n",
+    "## Covid19 India: Basic EDA & Predictive Modeling\n",
     "\n",
-    "**To-Do:** General information on project, including information, material pertaining to subject matter"
+    "Covid Data sourced from: https://www.covid19india.org\n",
+    "\n",
+    "Objectives of this notebook:\n",
+    "\n",
+    "1. Extract India-level data from the main data set\n",
+    "2. Create new columns - Daily Confirmed, Daily Recovered, Daily Deceased, Active, TPR, TRR, CFR\n",
+    "3. Perform basic analysis and EDA\n",
+    "4. Create Machine Learning models to help predict"
    ]
   },
   {
@@ -2925,18 +2932,6 @@
    "metadata": {},
    "source": [
     "## 2. Visualizations"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Visualizations:\n",
-    "\n",
-    "1. daily confirmed, daily recovered, daily tested\n",
-    "2. total confirmed, total recovered, total tested\n",
-    "3. total recovery rate, total positivity rate, total fatality rate\n",
-    "4. daily recovery, daily fatality, daily positivity (if columns are created)"
    ]
   },
   {
