Added notes to Covid19-India notebook

--- a/Projects/Covid19_India/Notebooks/Covid_IndiaAnalysis_v1.0.0.ipynb
+++ b/Projects/Covid19_India/Notebooks/Covid_IndiaAnalysis_v1.0.0.ipynb
@@ -11,9 +11,9 @@
     "Objectives of this notebook:\n",
     "\n",
     "1. Extract India-level data from the main data set\n",
-    "2. Create new columns - Daily Confirmed, Daily Recovered, Daily Deceased, Active, TPR, TRR, CFR\n",
+    "2. Create new columns - Daily Confirmed, Daily Recovered, Daily Deceased, Active, TPR, TRR, CFR, Daily Tested\n",
     "3. Perform basic analysis and EDA\n",
-    "4. Create Machine Learning models to help predict"
+    "4. Create Machine Learning models to help predict 'Daily Confirmed' cases"
    ]
   },
   {
@@ -3559,6 +3559,13 @@
     "plt.xlabel('Date')\n",
     "plt.ylabel('Count')\n",
     "plt.title('India - Daily Deceased');"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3. Predictive Modeling (coming soon..)"
    ]
   },
   {
