New Notebook for Covid19 2021 Analysis

--- a/Projects/Covid19_India/Notebooks/Covid_IndiaAnalysis2021_v1.0.ipynb
+++ b/Projects/Covid19_India/Notebooks/Covid_IndiaAnalysis2021_v1.0.ipynb
@@ -3337,7 +3337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3353,7 +3353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -3463,7 +3463,7 @@
        "4          0.0  0.0  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3475,7 +3475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -3495,7 +3495,7 @@
        "Name: DRR, Length: 366, dtype: float64"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3513,7 +3513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3529,7 +3529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -3549,7 +3549,7 @@
        "Name: DPR, Length: 366, dtype: float64"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3568,7 +3568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3582,7 +3582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -3602,7 +3602,7 @@
        "Name: DFR, Length: 366, dtype: float64"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3614,7 +3614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -3736,7 +3736,7 @@
        "364     831807.0   73.63  2.00  0.72  "
       ]
      },
-     "execution_count": 51,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3749,7 +3749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -3789,7 +3789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -3823,7 +3823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -3957,7 +3957,7 @@
        "4          0.0  0.0  0.0  NaN      3        0  "
       ]
      },
-     "execution_count": 54,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3972,7 +3972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -3981,7 +3981,7 @@
        "(365, 12)"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3992,7 +3992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -4126,7 +4126,7 @@
        "4          0.0  0.0  0.0  0.0      3        0  "
       ]
      },
-     "execution_count": 56,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4139,7 +4139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -4160,7 +4160,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4171,7 +4171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -4213,7 +4213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -4347,7 +4347,7 @@
        "4          0.0  0.0  0.0  0.0      3        0  "
       ]
      },
-     "execution_count": 59,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4360,7 +4360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -4504,7 +4504,7 @@
        "2020-03-02          0.0  0.0  0.0  0.0      3        0  "
       ]
      },
-     "execution_count": 61,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4516,7 +4516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -4545,7 +4545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -4572,7 +4572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -4599,7 +4599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -4627,7 +4627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -4655,7 +4655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -4690,7 +4690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -4794,7 +4794,7 @@
        "4          0.0  "
       ]
      },
-     "execution_count": 70,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4807,7 +4807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -4828,6 +4828,139 @@
     "fig, ax = plt.subplots(figsize=(14,9))\n",
     "sns.heatmap(corr_df.corr(), annot=True, fmt='.1g', vmin=-1, vmax=1, center=0, cmap='coolwarm',\n",
     "           linewidths=0, linecolor='white', ax=ax);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Active</th>\n",
+       "      <th>DailyConfirmed</th>\n",
+       "      <th>DailyRecovered</th>\n",
+       "      <th>DailyDeceased</th>\n",
+       "      <th>DailyTested</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>3.650000e+02</td>\n",
+       "      <td>365.000000</td>\n",
+       "      <td>365.000000</td>\n",
+       "      <td>365.000000</td>\n",
+       "      <td>3.650000e+02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>3.442614e+05</td>\n",
+       "      <td>30309.791781</td>\n",
+       "      <td>29448.706849</td>\n",
+       "      <td>429.756164</td>\n",
+       "      <td>5.881136e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>3.062323e+05</td>\n",
+       "      <td>27883.560934</td>\n",
+       "      <td>27766.960000</td>\n",
+       "      <td>371.608943</td>\n",
+       "      <td>4.393239e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>8.587300e+04</td>\n",
+       "      <td>7254.000000</td>\n",
+       "      <td>3789.000000</td>\n",
+       "      <td>104.000000</td>\n",
+       "      <td>1.155190e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>2.444380e+05</td>\n",
+       "      <td>19430.000000</td>\n",
+       "      <td>19508.000000</td>\n",
+       "      <td>354.000000</td>\n",
+       "      <td>6.991850e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>5.674170e+05</td>\n",
+       "      <td>49631.000000</td>\n",
+       "      <td>52135.000000</td>\n",
+       "      <td>686.000000</td>\n",
+       "      <td>9.948510e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>1.017705e+06</td>\n",
+       "      <td>97860.000000</td>\n",
+       "      <td>102075.000000</td>\n",
+       "      <td>2004.000000</td>\n",
+       "      <td>1.492409e+06</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Active  DailyConfirmed  DailyRecovered  DailyDeceased  \\\n",
+       "count  3.650000e+02      365.000000      365.000000     365.000000   \n",
+       "mean   3.442614e+05    30309.791781    29448.706849     429.756164   \n",
+       "std    3.062323e+05    27883.560934    27766.960000     371.608943   \n",
+       "min    0.000000e+00        0.000000        0.000000       0.000000   \n",
+       "25%    8.587300e+04     7254.000000     3789.000000     104.000000   \n",
+       "50%    2.444380e+05    19430.000000    19508.000000     354.000000   \n",
+       "75%    5.674170e+05    49631.000000    52135.000000     686.000000   \n",
+       "max    1.017705e+06    97860.000000   102075.000000    2004.000000   \n",
+       "\n",
+       "        DailyTested  \n",
+       "count  3.650000e+02  \n",
+       "mean   5.881136e+05  \n",
+       "std    4.393239e+05  \n",
+       "min    0.000000e+00  \n",
+       "25%    1.155190e+05  \n",
+       "50%    6.991850e+05  \n",
+       "75%    9.948510e+05  \n",
+       "max    1.492409e+06  "
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "corr_df.describe()"
    ]
   },
   {
